libs/contiguous-tree-macros/tests/ui/duplicate_variant.stderr
error: duplicate tree variant
  --> tests/ui/duplicate_variant.rs:12:9
   |
12 |         Leaf(),
   |         ^^^^
